# kiwi

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  main.go
assets/caddy/: Caddyfile  config.json  docker-compose.yml
cli/: Cargo.toml
cmd/kcli/: main.go
frontend/: package-lock.json
frontend/src/: App.js
frontend/src/components/: AppList.js  ChatInterface.js  ChatMessage.js  Header.js
internal/git/: server.go
internal/runtime/docker/: client.go  container.go  image.go
internal/tarball/: tar.go  tar_test.go
pkg/container/: docker.go  types.go
runtime/: Cargo.toml
runtime/src/: lib.rs
server/: Cargo.toml
server/cmd/: main.go
server/src/: main.rs
share/: Cargo.toml
share/src/: caddy.rs  lib.rs
templates/: service_template.yaml
