[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
share = { path = "../share" }

bollard = "0.15.0"
futures-util = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
axum = "0.7.4"
serde = { version = "1.0.195", features = ["serde_derive", "derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }